fix overflow scroll in table

--- a/src/frontend/screens/Quests/index.module.scss
+++ b/src/frontend/screens/Quests/index.module.scss
@@ -1,7 +1,9 @@
 .root {
   display: grid;
   grid-template-columns: 1fr auto;
+  grid-template-rows: 100%;
   column-gap: var(--space-2lg-fixed);
   padding-bottom: var(--space-2lg-fixed);
-  height: 100%;
+  position: absolute;
+  inset: 0;
 }
